# polymarket-btc-5m-assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.MD  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  package-lock.json  package.json
.claude/: launch.json
.do/: app.yaml
.github/workflows/: kronos_daily.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
data/: state.json
docs/: 2026-02-25-session-summary.md
docs/plans/: 2026-02-22-dashboard-redesign-design.md  2026-02-22-dashboard-redesign.md
kronos_poc/: .gitignore  README.md  daily_run.py  evaluate.py  fetch_markets.py  requirements.txt  run_forecast.py
scripts/: preflight.js
src/: config.js  config.rs  error.rs  index.js  lib.rs  main.rs  model.rs  time_utils.rs
src/api/: routes.rs
src/application/: TradingEngine.js
src/data/: clob_rest.rs  clob_ws.rs  coinbase_ws.rs  gamma.rs  mod.rs
src/domain/: entryGate.js
src/engine/: entry.rs  exit.rs  mod.rs  sizing.rs  state.rs  tick.rs
src/exec/: live.rs  mod.rs  paper.rs  redeem.rs
src/market/: scheduler.rs
src/services/: backtestService.js  statusService.js
src/signing/: api_auth.rs  mod.rs  order_eip712.rs
src/store/: mod.rs  supabase.rs  tick_recorder.rs
src/ui/: analytics.js  index.html  script.js  server.js  style.css
static/: app.js  index.html  style.css
test/: analyticsService.test.js  suggestionService.test.js
test/domain/: entryGate.test.js  exitEvaluator.test.js  killSwitch.test.js  orderLifecycle.test.js  reconciliation.test.js  retryPolicy.test.js  sizing.test.js
tests/: paper_flow.rs
(+34 files in other folders)
